<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"
            android:iconTint="@color/nav_text_color"/>

        <item
            android:id="@+id/nav_breaking_news"
            android:icon="@drawable/ic_alarm_white_24dp"
            android:title="@string/breaking_news"
            android:iconTint="@color/nav_text_color"/>

        <item
            android:id="@+id/nav_sports_news"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/sports_news"
            android:iconTint="@color/nav_text_color"/>

        <item
            android:id="@+id/nav_health_news"
            android:icon="@drawable/ic_healing_black_24dp"
            android:title="@string/health_news"
            android:iconTint="@color/nav_text_color"/>

        <item
            android:id="@+id/nav_education_news"
            android:icon="@drawable/ic_mode_edit_black_24dp"
            android:title="@string/education_news"
            android:iconTint="@color/nav_text_color"/>

    </group>

</menu>